# ipfs-rs-wrapper

./: .gitignore  Cargo.toml  package.json  polywrap.build.yaml  polywrap.yaml
examples/: add.rs  cat.rs
src/: lib.rs
